day-3/24-pod-secret.yaml
# kubectl create secret generic demo-secret --from-literal=user=lukasz --from-literal=pass=HomePl1234^ -o yaml --dry-run=client | kubectl apply -f -
apiVersion: v1
kind: Pod
metadata:
  name: pkad
  labels:
    name: pkad
spec:
  containers:
  - name: myapp
    image: gcr.io/kuar-demo/kuard-amd64:1
