day-3/32-pod-pdb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aci
spec:
  replicas: 3
  selector:
    matchLabels:
      app: aci
  template:
    metadata:
      labels:
        app: aci
    spec:
      containers:
      - name: aci
        image: poznajkubernetes/helloapp:svc
        resources: {}
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - "aci" 
              weight: 100
