day-3/29-svc-loadbalancer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: helloapp
  template:
    metadata:
      labels:
        app: helloapp
    spec:
      containers:
      - name: srv
        image: poznajkubernetes/helloapp:svc
        resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: helloapp
spec:
  selector:
    app: helloapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: LoadBalancer
