day-3/27-ingress-hostname.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloapp-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloapp-v1
  template:
    metadata:
      labels:
        app: helloapp-v1
    spec:
      containers:
      - name: srv
        image: poznajkubernetes/helloapp:svc
        resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: helloapp-v1
spec:
  selector:
    app: helloapp-v1
  ports:
  - port: 8080
    targetPort: 8080
    name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloapp-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloapp-v2
  template:
    metadata:
      labels:
        app: helloapp-v2
    spec:
      containers:
      - name: srv
        image: poznajkubernetes/helloapp:svc
        resources: {}
---
apiVersion: v1
kind: Service
metadata:
  name: helloapp-v2
spec:
  selector:
    app: helloapp-v2
  ports:
  - port: 8080
    targetPort: 8080
    name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloapp
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: helloapp.home.pl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: helloapp-v1
            port:
              number: 8080
  - host: v2.demo.pl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: helloapp-v2
            port:
              number: 8080
